--- a/package.json
+++ b/package.json
@@ -12,32 +12,39 @@
     "type": "git",
     "url": "git://github.com/fb55/css-select.git"
   },
+  "main": "lib/index.js",
   "files": [
-    "index.js",
-    "index.d.ts",
     "lib"
   ],
   "dependencies": {
     "boolbase": "^1.0.0",
-    "css-what": "^2.1.2",
-    "domutils": "^1.7.0",
+    "css-what": "^3.2.0",
+    "domutils": "^2.0.0",
     "nth-check": "^1.0.2"
   },
   "devDependencies": {
+    "@types/node": "^12.6.9",
+    "@typescript-eslint/eslint-plugin": "^1.13.0",
+    "@typescript-eslint/parser": "^1.13.0",
     "cheerio-soupselect": "^0.1.1",
     "coveralls": "^3.0.2",
-    "eslint": "^6.0.0",
+    "eslint": "^6.1.0",
+    "eslint-config-prettier": "^6.0.0",
+    "eslint-config-xo-typescript": "^0.15.0",
     "expect.js": "^0.3.1",
-    "htmlparser2": "^3.10.0",
+    "htmlparser2": "^4.0.0",
     "istanbul": "^0.4.5",
-    "mocha": "^6.0.0",
-    "mocha-lcov-reporter": "^1.3.0"
+    "mocha": "^6.2.0",
+    "mocha-lcov-reporter": "^1.3.0",
+    "prettier": "^1.18.2",
+    "typescript": "^3.5.3"
   },
   "scripts": {
     "test": "mocha && npm run lint",
-    "lint": "eslint index.js lib/*.js test/*.js",
+    "lint": "eslint --ext=js,ts src test",
     "lcov": "istanbul cover _mocha --report lcovonly -- -R spec",
-    "coveralls": "npm run lint && npm run lcov && (cat coverage/lcov.info | coveralls || exit 0)"
+    "coveralls": "npm run lint && npm run lcov && (cat coverage/lcov.info | coveralls || exit 0)",
+    "build": "tsc"
   },
   "license": "BSD-2-Clause",
   "types": "index.d.ts",
